# dissertation-product

./: .gitignore  Cargo.toml  README
api/: Cargo.toml
api/src/: main.rs  request.rs
obj_db/: Cargo.toml
obj_db/src/: database.rs  endpoint.rs  lib.rs
obj_db/src/database/: cell.rs  conditional.rs  part.rs  record.rs  table.rs
obj_db/src/endpoint/: query.rs  runnable.rs  script.rs
