[package]
name = "obj_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = "1.0.116"
regex = "1.10.4"
bincode = "1.3.3"
serde = { version = "1.0.198", features = ["derive"] }
get-size = { version = "0.1.4", features = ["derive"] }